--- a/web-console/package.json
+++ b/web-console/package.json
@@ -94,7 +94,8 @@
     "@awesome-code-style/eslint-config": "^6.0.0",
     "@awesome-code-style/prettier-config": "^4.0.0",
     "@awesome-code-style/stylelint-config": "^6.0.0",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.0.1",
     "@types/classnames": "^2.2.9",
     "@types/d3-array": "^3.2.1",
     "@types/d3-axis": "^3.0.6",
